# test-stripe

./: .env.sample  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  README.md  bulma-css-vars.config.js  capacitor.config.ts  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml
.storybook/: main.js  preview-head.html  preview.js  webpack.config.js
__mocks__/: styleMock.js
android/app/: build.gradle  capacitor.build.gradle
docs/: API.md  CODING.md  DEVELOPMENT.md  ENVS.md  GITHUB_ACTIONS.md  HELPERS.md  README.md  STORE.md  STORYBOOK.md  STRUCTURE.md  TESTING.md
mock/: dev.json
python-server/: pyproject.toml
python-server/src/: Makefile  main.py
scripts/: check_build.sh  setup.sh  tests.sh
src/: App.vue  main.ts  style.d.ts
src/components/: Login.vue  Page.vue
src/components/assets/: CityIcon.vue  RequestErrorIcon.vue
src/components/payment/: Payment.vue
src/core/: types.ts
src/core/config/: index.ts
src/core/helpers/: env.ts  getComponentByName.ts  message.ts  useContrastColor.ts  useNavbarAdapter.spec.ts  useNavbarAdapter.ts  usePageTitle.ts  useVModel.ts
src/core/plugins/: index.ts
src/core/services/: index.ts
src/data/icons/: fontAwesome.ts
src/router/: index.ts
src/router/modules/: errors.ts
src/store/: index.ts  reusable.ts
src/store/modules/: types.ts
src/style/: main.sass
src/style/bulma-generated/: generated-bulma-vars.sass  (+1 more)
src/views/: Index.vue  LayoutManager.vue  Render.vue
(+23 files in other folders)
